fixed light flash on input and dark mode persisting in light mode on input boxes

--- a/function_acoustics/base_build/static/mainPage.css
+++ b/function_acoustics/base_build/static/mainPage.css
@@ -218,7 +218,8 @@ body {
 }
 
 .dark-mode .dropdown-content div:hover {
-  background-color: #bb0a1e; 
+  background-color: #bb0a1e !important;
+  color: #fff !important;
 }
 
 @keyframes fadeIn {
